# Zygote-bot

./: README.md
DISCORD.PY/: .env  backup.txt  client_secret_808644689718-8or1pllh4cv6ns2m4n2png7dutg47sq4.apps.googleusercontent.com.json  main.py  mainbank.json  nasa.py  profanity.txt  pyproject.toml  qtest.py
DISCORD.PY/cogs/: AstroCog.py  BasicCog.py  GiveawayCog.py  ModCog.py  RpgCog.py  VCCog.py
django/mysite/: db.sqlite3
django/mysite/mysite/: settings.py  urls.py
django/mysite/personal/: urls.py  views.py
django/mysite/personal/templates/personal/: contact.html  header.html  home.html  thiswebsite.html
django/mysite/personal/templates/personal/includes/: htmlsnippets.html
